# CnC_Generals_Zero_Hour

./: .gitignore  README.md
Generals/Code/GameEngine/Include/Common/: CopyProtection.h
Generals/Code/GameEngine/Source/Common/System/: CopyProtection.cpp
Generals/Code/GameEngine/Source/GameLogic/System/: GameLogic.cpp
Generals/Code/Main/: WinMain.cpp
Generals/Code/Tools/Launcher/: Protect.cpp  main.cpp  process.cpp
Generals/Code/Tools/Launcher/DatGen/: DatGen.cpp
GeneralsMD/: .gitignore
GeneralsMD/Code/GameEngine/Include/Common/: CopyProtection.h
GeneralsMD/Code/GameEngine/Source/GameLogic/System/: GameLogic.cpp
GeneralsMD/Code/Libraries/Max4SDK/: README.md
GeneralsMD/Code/Libraries/Max4SDK/include/: Max.h  maxfuncs.cpp  modstack.h  stdmat.h
GeneralsMD/Code/Main/: WinMain.cpp
GeneralsMD/Code/Tools/Launcher/: Protect.cpp  main.cpp  process.cpp
GeneralsMD/Code/Tools/Launcher/DatGen/: DatGen.cpp
Miles Sound Tools/tools/win/: mssogg.asi
OpenAL/: .gitignore
Support/: .gitignore  BUILD_README.md  README.md  build_all.bat  build_config.bat  dependency_sources.md  gamespy_conversion.md  migrate_libraries.bat  migration_log.txt  replace_files.bat  setup_and_build.bat  setup_directx.bat  setup_lzhlight.bat  setup_repo.bat
Support/GSReplacement/: CMakeLists.txt  Makefile  README.md  build-with-docker.sh  build.bat
Support/GSReplacement/src/: ConfigParser.cpp  FunctionHook.cpp  GameBackend.cpp  GameSpyProxy.cpp  Logger.cpp  RevoraBackend.cpp  main.cpp
Support/STLportPatching/: apply_stlport_diff.py  patch_stlport.bat
(+2 files in other folders)
